// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`escapes " according to theme 1`] = `"<\\\\\\">"`;

exports[`escapes " according to theme 2`] = `
"<\\\\\\"␊
>"
`;

exports[`escapes ' according to theme 1`] = `"<\\\\'>"`;

exports[`escapes ' according to theme 2`] = `
"<\\\\'␊
>"
`;

exports[`escapes \` according to theme 1`] = `"<\\\\\`>"`;

exports[`escapes \` according to theme 2`] = `
"<\\\\\`␊
>"
`;

exports[`formats ArrayBuffer 1`] = `
"%object.ctor.open%ArrayBuffer%object.ctor.close% %list.openBracket#[%
  %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close%
  %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close%
%list.closeBracket#]%"
`;

exports[`formats ArrayBuffer with additional properties 1`] = `
"%object.ctor.open%ArrayBuffer%object.ctor.close% %list.openBracket#[%
  %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close%
  %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close%
  %stats.separator#---%
  foo%property.separator#: %%string.line.open#'%%string.open%bar%string.close%%string.line.close#'%%property.after#,%
%list.closeBracket#]%"
`;

exports[`formats Buffer @Uint8Array 1`] = `
"%object.ctor.open%Buffer%object.ctor.close% %object.secondaryStringTag.open#@%Uint8Array%object.secondaryStringTag.close% %list.openBracket#[%
  %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close%
  %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close%
%list.closeBracket#]%"
`;

exports[`formats Buffer @Uint8Array with additional properties 1`] = `
"%object.ctor.open%Buffer%object.ctor.close% %object.secondaryStringTag.open#@%Uint8Array%object.secondaryStringTag.close% %list.openBracket#[%
  %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close%
  %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close%
  %stats.separator#---%
  foo%property.separator#: %%string.line.open#'%%string.open%bar%string.close%%string.line.close#'%%property.after#,%
%list.closeBracket#]%"
`;

exports[`formats DataView 1`] = `
"%object.ctor.open%DataView%object.ctor.close% %list.openBracket#[%
  %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close%
  %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close%
%list.closeBracket#]%"
`;

exports[`formats DataView with additional properties 1`] = `
"%object.ctor.open%DataView%object.ctor.close% %list.openBracket#[%
  %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close%
  %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close%
  %stats.separator#---%
  foo%property.separator#: %%string.line.open#'%%string.open%bar%string.close%%string.line.close#'%%property.after#,%
%list.closeBracket#]%"
`;

exports[`formats Float32Array 1`] = `
"%object.ctor.open%Float32Array%object.ctor.close% %list.openBracket#[%
  %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close%
  %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close%
%list.closeBracket#]%"
`;

exports[`formats Float32Array with additional properties 1`] = `
"%object.ctor.open%Float32Array%object.ctor.close% %list.openBracket#[%
  %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close%
  %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close%
  %stats.separator#---%
  foo%property.separator#: %%string.line.open#'%%string.open%bar%string.close%%string.line.close#'%%property.after#,%
%list.closeBracket#]%"
`;

exports[`formats Float64Array 1`] = `
"%object.ctor.open%Float64Array%object.ctor.close% %list.openBracket#[%
  %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close%
  %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close%
%list.closeBracket#]%"
`;

exports[`formats Float64Array with additional properties 1`] = `
"%object.ctor.open%Float64Array%object.ctor.close% %list.openBracket#[%
  %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close%
  %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close%
  %stats.separator#---%
  foo%property.separator#: %%string.line.open#'%%string.open%bar%string.close%%string.line.close#'%%property.after#,%
%list.closeBracket#]%"
`;

exports[`formats Int8Array 1`] = `
"%object.ctor.open%Int8Array%object.ctor.close% %list.openBracket#[%
  %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close%
  %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close%
%list.closeBracket#]%"
`;

exports[`formats Int8Array with additional properties 1`] = `
"%object.ctor.open%Int8Array%object.ctor.close% %list.openBracket#[%
  %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close%
  %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close%
  %stats.separator#---%
  foo%property.separator#: %%string.line.open#'%%string.open%bar%string.close%%string.line.close#'%%property.after#,%
%list.closeBracket#]%"
`;

exports[`formats Int16Array 1`] = `
"%object.ctor.open%Int16Array%object.ctor.close% %list.openBracket#[%
  %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close%
  %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close%
%list.closeBracket#]%"
`;

exports[`formats Int16Array with additional properties 1`] = `
"%object.ctor.open%Int16Array%object.ctor.close% %list.openBracket#[%
  %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close%
  %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close%
  %stats.separator#---%
  foo%property.separator#: %%string.line.open#'%%string.open%bar%string.close%%string.line.close#'%%property.after#,%
%list.closeBracket#]%"
`;

exports[`formats Int32Array 1`] = `
"%object.ctor.open%Int32Array%object.ctor.close% %list.openBracket#[%
  %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close%
  %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close%
%list.closeBracket#]%"
`;

exports[`formats Int32Array with additional properties 1`] = `
"%object.ctor.open%Int32Array%object.ctor.close% %list.openBracket#[%
  %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close%
  %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close%
  %stats.separator#---%
  foo%property.separator#: %%string.line.open#'%%string.open%bar%string.close%%string.line.close#'%%property.after#,%
%list.closeBracket#]%"
`;

exports[`formats Uint8Array 1`] = `
"%object.ctor.open%Uint8Array%object.ctor.close% %list.openBracket#[%
  %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close%
  %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close%
%list.closeBracket#]%"
`;

exports[`formats Uint8Array with additional properties 1`] = `
"%object.ctor.open%Uint8Array%object.ctor.close% %list.openBracket#[%
  %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close%
  %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close%
  %stats.separator#---%
  foo%property.separator#: %%string.line.open#'%%string.open%bar%string.close%%string.line.close#'%%property.after#,%
%list.closeBracket#]%"
`;

exports[`formats Uint8ClampedArray 1`] = `
"%object.ctor.open%Uint8ClampedArray%object.ctor.close% %list.openBracket#[%
  %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close%
  %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close%
%list.closeBracket#]%"
`;

exports[`formats Uint8ClampedArray with additional properties 1`] = `
"%object.ctor.open%Uint8ClampedArray%object.ctor.close% %list.openBracket#[%
  %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close%
  %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close%
  %stats.separator#---%
  foo%property.separator#: %%string.line.open#'%%string.open%bar%string.close%%string.line.close#'%%property.after#,%
%list.closeBracket#]%"
`;

exports[`formats Uint16Array 1`] = `
"%object.ctor.open%Uint16Array%object.ctor.close% %list.openBracket#[%
  %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close%
  %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close%
%list.closeBracket#]%"
`;

exports[`formats Uint16Array with additional properties 1`] = `
"%object.ctor.open%Uint16Array%object.ctor.close% %list.openBracket#[%
  %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close%
  %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close%
  %stats.separator#---%
  foo%property.separator#: %%string.line.open#'%%string.open%bar%string.close%%string.line.close#'%%property.after#,%
%list.closeBracket#]%"
`;

exports[`formats Uint32Array 1`] = `
"%object.ctor.open%Uint32Array%object.ctor.close% %list.openBracket#[%
  %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close%
  %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close%
%list.closeBracket#]%"
`;

exports[`formats Uint32Array with additional properties 1`] = `
"%object.ctor.open%Uint32Array%object.ctor.close% %list.openBracket#[%
  %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close%
  %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close% %typedArray.bytes.open%decafbad%typedArray.bytes.close%
  %stats.separator#---%
  foo%property.separator#: %%string.line.open#'%%string.open%bar%string.close%%string.line.close#'%%property.after#,%
%list.closeBracket#]%"
`;

exports[`formats a multiline string inside an array 1`] = `
"%list.openBracket#[%
  %string.multiline.start#\`%%string.open%bar%string.close%%string.controlPicture.open%␊%string.controlPicture.close%%string.open%%string.close%
  %string.open%baz%string.close%%string.multiline.end#\`%%item.after#,%
%list.closeBracket#]%"
`;

exports[`formats a multiline string inside sets 1`] = `
"%object.ctor.open%Set%object.ctor.close% %object.openBracket#{%
  %string.multiline.start#\`%%string.open%bar%string.close%%string.controlPicture.open%␊%string.controlPicture.close%%string.open%%string.close%
  %string.open%baz%string.close%%string.multiline.end#\`%%item.after#,%
%object.closeBracket#}%"
`;

exports[`formats a simple array 1`] = `
"%list.openBracket#[%
  %string.line.open#'%%string.open%foo%string.close%%string.line.close#'%%item.after#,%
  %string.line.open#'%%string.open%bar%string.close%%string.line.close#'%%item.after#,%
%list.closeBracket#]%"
`;

exports[`formats a simple object 1`] = `
"%object.openBracket#{%
  baz%property.separator#: %%string.line.open#'%%string.open%qux%string.close%%string.line.close#'%%property.after#,%
  foo%property.separator#: %%string.line.open#'%%string.open%bar%string.close%%string.line.close#'%%property.after#,%
%object.closeBracket#}%"
`;

exports[`formats a simple, nested array 1`] = `
"%list.openBracket#[%
  %list.openBracket#[%
    %string.line.open#'%%string.open%foo%string.close%%string.line.close#'%%item.after#,%
    %string.line.open#'%%string.open%bar%string.close%%string.line.close#'%%item.after#,%
  %list.closeBracket#]%%item.after#,%
%list.closeBracket#]%"
`;

exports[`formats a simple, nested object 1`] = `
"%object.openBracket#{%
  foo%property.separator#: %%object.openBracket#{%
    baz%property.separator#: %%string.line.open#'%%string.open%qux%string.close%%string.line.close#'%%property.after#,%
  %object.closeBracket#}%%property.after#,%
%object.closeBracket#}%"
`;

exports[`formats an array with additional properties 1`] = `
"%list.openBracket#[%
  %string.line.open#'%%string.open%foo%string.close%%string.line.close#'%%item.after#,%
  %string.line.open#'%%string.open%bar%string.close%%string.line.close#'%%item.after#,%
  %stats.separator#---%
  baz%property.separator#: %%string.line.open#'%%string.open%qux%string.close%%string.line.close#'%%property.after#,%
%list.closeBracket#]%"
`;

exports[`formats anonymous functions 1`] = `"%function.stringTag.open%Function%function.stringTag.close% %object.openBracket#{%%object.closeBracket#}%"`;

exports[`formats arguments 1`] = `
"%object.ctor.open%Arguments%object.ctor.close% %list.openBracket#[%
  %string.line.open#'%%string.open%foo%string.close%%string.line.close#'%%item.after#,%
  %string.line.open#'%%string.open%bar%string.close%%string.line.close#'%%item.after#,%
  %string.line.open#'%%string.open%baz%string.close%%string.line.close#'%%item.after#,%
%list.closeBracket#]%"
`;

exports[`formats boxed primitive: -42 1`] = `
"%object.ctor.open%Number%object.ctor.close% %object.openBracket#{%
  %number.open%-42%number.close%
%object.closeBracket#}%"
`;

exports[`formats boxed primitive: -Infinity 1`] = `
"%object.ctor.open%Number%object.ctor.close% %object.openBracket#{%
  %number.open%-Infinity%number.close%
%object.closeBracket#}%"
`;

exports[`formats boxed primitive: 0 1`] = `
"%object.ctor.open%Number%object.ctor.close% %object.openBracket#{%
  %number.open%0%number.close%
%object.closeBracket#}%"
`;

exports[`formats boxed primitive: 0 2`] = `
"%object.ctor.open%Number%object.ctor.close% %object.openBracket#{%
  %number.open%-0%number.close%
%object.closeBracket#}%"
`;

exports[`formats boxed primitive: 0 3`] = `
"%object.ctor.open%Number%object.ctor.close% %object.openBracket#{%
  %number.open%0%number.close%
%object.closeBracket#}%"
`;

exports[`formats boxed primitive: 42 1`] = `
"%object.ctor.open%Number%object.ctor.close% %object.openBracket#{%
  %number.open%42%number.close%
%object.closeBracket#}%"
`;

exports[`formats boxed primitive: Infinity 1`] = `
"%object.ctor.open%Number%object.ctor.close% %object.openBracket#{%
  %number.open%Infinity%number.close%
%object.closeBracket#}%"
`;

exports[`formats boxed primitive: NaN 1`] = `
"%object.ctor.open%Number%object.ctor.close% %object.openBracket#{%
  %number.open%NaN%number.close%
%object.closeBracket#}%"
`;

exports[`formats boxed primitive: false 1`] = `
"%object.ctor.open%Boolean%object.ctor.close% %object.openBracket#{%
  %boolean.open%false%boolean.close%
%object.closeBracket#}%"
`;

exports[`formats boxed primitive: foo 1`] = `
"%object.ctor.open%String%object.ctor.close% %object.openBracket#{%
  %string.line.open#'%%string.open%foo%string.close%%string.line.close#'%
%object.closeBracket#}%"
`;

exports[`formats boxed primitive: true 1`] = `
"%object.ctor.open%Boolean%object.ctor.close% %object.openBracket#{%
  %boolean.open%true%boolean.close%
%object.closeBracket#}%"
`;

exports[`formats boxed primitives with extra properties 1`] = `
"%object.ctor.open%String%object.ctor.close% %object.openBracket#{%
  %string.line.open#'%%string.open%foo%string.close%%string.line.close#'%
  %stats.separator#---%
  bar%property.separator#: %%string.line.open#'%%string.open%baz%string.close%%string.line.close#'%%property.after#,%
%object.closeBracket#}%"
`;

exports[`formats circular references 1`] = `
"%object.openBracket#{%
  circular%property.separator#: %%circular#[Circular]%%property.after#,%
%object.closeBracket#}%"
`;

exports[`formats dates 1`] = `"%object.ctor.open%Date%object.ctor.close% %date.value.open%1969-07-20 20:17:40 12ms Z%date.value.close% %object.openBracket#{%%object.closeBracket#}%"`;

exports[`formats dates with additional properties 1`] = `
"%object.ctor.open%Date%object.ctor.close% %date.value.open%1969-07-20 20:17:40 Z%date.value.close% %object.openBracket#{%
  foo%property.separator#: %%string.line.open#'%%string.open%bar%string.close%%string.line.close#'%%property.after#,%
%object.closeBracket#}%"
`;

exports[`formats errors with a name that does not include Error and does not match the constructor 1`] = `
"%error.name.open%Bar%error.name.close% %error.ctor.open#(%Foo%error.ctor.close#)% %object.secondaryStringTag.open#@%Error%object.secondaryStringTag.close% %object.openBracket#{%
  message%property.separator#: %%string.line.open#'%%string.open%Test message%string.close%%string.line.close#'%%property.after#,%
%object.closeBracket#}%"
`;

exports[`formats errors with additional properties 1`] = `
"%error.name.open%TypeError%error.name.close% %object.openBracket#{%
  foo%property.separator#: %%string.line.open#'%%string.open%bar%string.close%%string.line.close#'%%property.after#,%
  message%property.separator#: %%string.line.open#'%%string.open%Test message%string.close%%string.line.close#'%%property.after#,%
%object.closeBracket#}%"
`;

exports[`formats functions with additional properties 1`] = `
"%function.stringTag.open%Function%function.stringTag.close% %function.name.open%foo%function.name.close% %object.openBracket#{%
  bar%property.separator#: %%string.line.open#'%%string.open%baz%string.close%%string.line.close#'%%property.after#,%
%object.closeBracket#}%"
`;

exports[`formats funky objects that are lists and have an iterator 1`] = `
"%list.openBracket#[%
  %string.line.open#'%%string.open%first%string.close%%string.line.close#'%%item.after#,%
  %string.line.open#'%%string.open%second%string.close%%string.line.close#'%%item.after#,%
  %stats.separator#---%
  foo%property.separator#: %%string.line.open#'%%string.open%bar%string.close%%string.line.close#'%%property.after#,%
  %stats.separator#---%
  %string.line.open#'%%string.open%baz%string.close%%string.line.close#'%%item.after#,%
%list.closeBracket#]%"
`;

exports[`formats global 1`] = `"%global.open%Global%global.close% %object.openBracket#{%%object.closeBracket#}%"`;

exports[`formats maps 1`] = `
"%object.ctor.open%Map%object.ctor.close% %object.openBracket#{%
  %string.line.open#'%%string.open%foo%string.close%%string.line.close#'%%mapEntry.separator# => %%string.line.open#'%%string.open%bar%string.close%%string.line.close#'%%mapEntry.after#,%
  %object.openBracket#{%
    baz%property.separator#: %%string.line.open#'%%string.open%qux%string.close%%string.line.close#'%%property.after#,%
  %object.closeBracket#}%%mapEntry.separator# => %%string.line.open#'%%string.open%quux%string.close%%string.line.close#'%%mapEntry.after#,%
  %string.line.open#'%%string.open%corge%string.close%%string.line.close#'%%mapEntry.separator# => %%object.openBracket#{%
    grault%property.separator#: %%string.line.open#'%%string.open%garply%string.close%%string.line.close#'%%property.after#,%
  %object.closeBracket#}%%mapEntry.after#,%
%object.closeBracket#}%"
`;

exports[`formats maps with additional properties 1`] = `
"%object.ctor.open%Map%object.ctor.close% %object.openBracket#{%
  baz%property.separator#: %%string.line.open#'%%string.open%qux%string.close%%string.line.close#'%%property.after#,%
  %stats.separator#---%
  %string.line.open#'%%string.open%foo%string.close%%string.line.close#'%%mapEntry.separator# => %%string.line.open#'%%string.open%bar%string.close%%string.line.close#'%%mapEntry.after#,%
%object.closeBracket#}%"
`;

exports[`formats multiline strings inside a map 1`] = `
"%object.ctor.open%Map%object.ctor.close% %object.openBracket#{%
  %string.multiline.start#\`%%string.open%foo%string.close%%string.controlPicture.open%␊%string.controlPicture.close%%string.open%%string.close%
  %string.open%bar%string.close%%string.multiline.end#\`%%mapEntry.separator# => %%string.multiline.start#\`%%string.open%baz%string.close%%string.controlPicture.open%␊%string.controlPicture.close%%string.open%%string.close%
  %string.open%qux%string.close%%string.multiline.end#\`%%mapEntry.after#,%
%object.closeBracket#}%"
`;

exports[`formats multiline strings inside an object 1`] = `
"%object.openBracket#{%
  %string.line.open#'%%string.open%foo\\\\nbar%string.close%%string.line.close#'%%property.separator#: %%string.multiline.start#\`%%string.open%baz%string.close%%string.controlPicture.open%␊%string.controlPicture.close%%string.open%%string.close%
  %string.open%qux%string.close%%string.multiline.end#\`%%property.after#,%
%object.closeBracket#}%"
`;

exports[`formats named functions 1`] = `"%function.stringTag.open%Function%function.stringTag.close% %function.name.open%foo%function.name.close% %object.openBracket#{%%object.closeBracket#}%"`;

exports[`formats pointers 1`] = `
"%object.openBracket#{%
  baz%property.separator#: %%object.openBracket#{%
    foo%property.separator#: %%string.line.open#'%%string.open%bar%string.close%%string.line.close#'%%property.after#,%
  %object.closeBracket#}%%property.after#,%
  qux%property.separator#: %%object.openBracket#{%
    quux%property.separator#: %%object.openBracket#{%
      foo%property.separator#: %%string.line.open#'%%string.open%bar%string.close%%string.line.close#'%%property.after#,%
    %object.closeBracket#}%%property.after#,%
  %object.closeBracket#}%%property.after#,%
%object.closeBracket#}%"
`;

exports[`formats primitive:  1`] = `"%string.line.open#'%%string.open%%string.close%%string.line.close#'%"`;

exports[`formats primitive: \\ -- ' -- " 1`] = `"%string.line.open#'%%string.open%\\\\\\\\ -- ' -- \\"%string.close%%string.line.close#'%"`;

exports[`formats primitive: -42 1`] = `"%number.open%-42%number.close%"`;

exports[`formats primitive: -Infinity 1`] = `"%number.open%-Infinity%number.close%"`;

exports[`formats primitive: 0 1`] = `"%number.open%0%number.close%"`;

exports[`formats primitive: 0 2`] = `"%number.open%-0%number.close%"`;

exports[`formats primitive: 0 3`] = `"%number.open%0%number.close%"`;

exports[`formats primitive: 42 1`] = `"%number.open%42%number.close%"`;

exports[`formats primitive: Infinity 1`] = `"%number.open%Infinity%number.close%"`;

exports[`formats primitive: NaN 1`] = `"%number.open%NaN%number.close%"`;

exports[`formats primitive: Symbol() 1`] = `"%symbol.open%Symbol()%symbol.close%"`;

exports[`formats primitive: Symbol(Symbol.iterator) 1`] = `"%symbol.open%Symbol.iterator%symbol.close%"`;

exports[`formats primitive: Symbol(bar) 1`] = `"%symbol.open%Symbol.for(bar)%symbol.close%"`;

exports[`formats primitive: Symbol(foo) 1`] = `"%symbol.open%Symbol(foo)%symbol.close%"`;

exports[`formats primitive: false 1`] = `"%boolean.open%false%boolean.close%"`;

exports[`formats primitive: foo 1`] = `"%string.line.open#'%%string.open%foo%string.close%%string.line.close#'%"`;

exports[`formats primitive: foo\\nbar\\baz'" 1`] = `
"%string.multiline.start#\`%%string.open%foo%string.close%%string.controlPicture.open%␊%string.controlPicture.close%%string.open%%string.close%
%string.open%bar\\\\\\\\baz'\\"%string.close%%string.multiline.end#\`%"
`;

exports[`formats primitive: null 1`] = `"%null.open%null%null.close%"`;

exports[`formats primitive: qux\\r\\nquux 1`] = `
"%string.multiline.start#\`%%string.open%qux%string.close%%string.controlPicture.open%␍%string.controlPicture.close%%string.open%%string.close%%string.controlPicture.open%␊%string.controlPicture.close%%string.open%%string.close%
%string.open%quux%string.close%%string.multiline.end#\`%"
`;

exports[`formats primitive: qux\\rquux 1`] = `
"%string.multiline.start#\`%%string.open%qux%string.close%%string.controlPicture.open%␍%string.controlPicture.close%%string.open%%string.close%
%string.open%quux%string.close%%string.multiline.end#\`%"
`;

exports[`formats primitive: true 1`] = `"%boolean.open%true%boolean.close%"`;

exports[`formats primitive: undefined 1`] = `"%undefined.open%undefined%undefined.close%"`;

exports[`formats promises 1`] = `"%object.ctor.open%Promise%object.ctor.close% %object.openBracket#{%%object.closeBracket#}%"`;

exports[`formats promises with additional properties 1`] = `
"%object.ctor.open%Promise%object.ctor.close% %object.openBracket#{%
  foo%property.separator#: %%string.line.open#'%%string.open%bar%string.close%%string.line.close#'%%property.after#,%
%object.closeBracket#}%"
`;

exports[`formats regular expressions 1`] = `"%regexp.source.open#/%foo%regexp.source.close#/%%regexp.flags.open%gim%regexp.flags.close%"`;

exports[`formats regular expressions with additional properties 1`] = `
"%object.ctor.open%RegExp%object.ctor.close% %object.openBracket#{%
  %regexp.source.open#/%foo%regexp.source.close#/%%regexp.flags.open%gim%regexp.flags.close%
  %regexp.separator#---%
  bar%property.separator#: %%string.line.open#'%%string.open%baz%string.close%%string.line.close#'%%property.after#,%
%object.closeBracket#}%"
`;

exports[`formats sets 1`] = `
"%object.ctor.open%Set%object.ctor.close% %object.openBracket#{%
  %string.line.open#'%%string.open%foo%string.close%%string.line.close#'%%item.after#,%
  %object.openBracket#{%
    bar%property.separator#: %%string.line.open#'%%string.open%baz%string.close%%string.line.close#'%%property.after#,%
  %object.closeBracket#}%%item.after#,%
%object.closeBracket#}%"
`;

exports[`formats sets with additional properties 1`] = `
"%object.ctor.open%Set%object.ctor.close% %object.openBracket#{%
  bar%property.separator#: %%string.line.open#'%%string.open%baz%string.close%%string.line.close#'%%property.after#,%
  %stats.separator#---%
  %string.line.open#'%%string.open%foo%string.close%%string.line.close#'%%item.after#,%
%object.closeBracket#}%"
`;

exports[`formats simple errors 1`] = `
"%error.name.open%TypeError%error.name.close% %object.openBracket#{%
  message%property.separator#: %%string.line.open#'%%string.open%Test message%string.close%%string.line.close#'%%property.after#,%
%object.closeBracket#}%"
`;

exports[`formats simple errors with a modified name 1`] = `
"%error.name.open%FooError%error.name.close% %error.ctor.open#(%TypeError%error.ctor.close#)% %object.openBracket#{%
  message%property.separator#: %%string.line.open#'%%string.open%Test message%string.close%%string.line.close#'%%property.after#,%
%object.closeBracket#}%"
`;

exports[`formats symbol keys 1`] = `
"%object.openBracket#{%
  %property.keyBracket.open#[%%symbol.open%Symbol()%symbol.close%%property.keyBracket.close#]%%property.separator#: %%string.line.open#'%%string.open%bar%string.close%%string.line.close#'%%property.after#,%
%object.closeBracket#}%"
`;

exports[`shows non-Object tag if constructor name is different 1`] = `"%object.ctor.open%Foo%object.ctor.close% %object.openBracket#{%%object.closeBracket#}%"`;

exports[`shows non-Object tag if constructor name is different 2`] = `"%object.ctor.open%Bar%object.ctor.close% %object.secondaryStringTag.open#@%Array%object.secondaryStringTag.close% %list.openBracket#[%%list.closeBracket#]%"`;

exports[`shows non-Object tag if constructor name is different 3`] = `"%object.ctor.open%Baz%object.ctor.close% %object.secondaryStringTag.open#@%Date%object.secondaryStringTag.close% %date.value.open%1969-07-20 20:17:40 Z%date.value.close% %object.openBracket#{%%object.closeBracket#}%"`;

exports[`shows non-Object tag if constructor name is different 4`] = `
"%object.ctor.open%Qux%object.ctor.close% %object.secondaryStringTag.open#@%RegExp%object.secondaryStringTag.close% %object.openBracket#{%
  %regexp.source.open#/%foo%regexp.source.close#/%%regexp.flags.open%%regexp.flags.close%
%object.closeBracket#}%"
`;

exports[`shows non-Object tag if constructor name is different 5`] = `"%object.ctor.open%Quux%object.ctor.close% %object.secondaryStringTag.open#@%Int16Array%object.secondaryStringTag.close% %list.openBracket#[%%list.closeBracket#]%"`;

exports[`shows string tag if object has no constructor 1`] = `"%object.stringTag.open#@%Object%object.stringTag.close% %object.openBracket#{%%object.closeBracket#}%"`;
